--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ brain-games = "brain_games.scripts.brain_Games:main"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.2.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
