--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ prompt = "^0.4.1"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_Games:main"
+brain-even = "brain_games.scripts.brain_even:main"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.2.0"
 flake8 = "^4.0.1"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
