--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Brain Games"
 authors = ["Alexey-Shepelev <alexey.sailor@gmail.com>"]
 packages = [
   { include = "brain_games" },
