--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ coverage.xml
 .pytest_cache/
 .vim
 .vscode
+.idea/misc.xml
+.idea/modules.xml
+.idea/python-project-lvl1.iml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/.gitignore
